--- a/lab2/Dockerfile
+++ b/lab2/Dockerfile
@@ -8,7 +8,9 @@ RUN ./mvnw clean install
 
 FROM my-alpine-jdk:1.0
 WORKDIR /opt/app
-COPY --from=builder /opt/app/target/*.jar /opt/app/*.jar
+COPY --from=builder /opt/app/target/*.jar /opt/app/app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/opt/app/*.jar"]
+
+USER 1001
 
