--- a/lab2/compose.yaml
+++ b/lab2/compose.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   mysqldb:
     container_name: mysqldb
-    image: mysql
+    image: mysql:8.3.0-oracle
     environment:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
